Bug 99527 - Accelerators in extension menus are not always displayed
Summary: Accelerators in extension menus are not always displayed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.1.4
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-27 10:53 UTC by Oliver Specht (CIB)
Modified: 2016-10-25 19:03 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
extension to demonstrate the problem (15.85 KB, application/vnd.openofficeorg.extension)
2016-04-27 10:53 UTC, Oliver Specht (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2016-04-27 10:53:33 UTC
Created attachment 124666 [details]
extension to demonstrate the problem

The attached dummy extensions adds a menu "Starter Project" to the Writer application. This menu has two entries and a sub menu with another two entries.
The commands "Action one" and "Action two" have key codes assigned (Ctrl+Shift+1) and (Ctrl+Shift+2)

In the sub menu entry this assignment is displayed but in the top level menu it is not visible.
Comment 1 Commit Notification 2016-04-27 11:48:47 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a4da4cc6602263dc2c14e885ec3a1d72d099253a

tdf#99527: show all accelerators in menus of extensions

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2016-04-27 13:31:05 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=79226e41fc4fa71b1f94bba0c6feaa318852d954&h=libreoffice-5-1

tdf#99527: show all accelerators in menus of extensions

It will be available in 5.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.