tdf#99527: show all accelerators in menus of extensions

XCUBasedAcceleratorConfiguration::getPreferredKeyEventsForCommandList() throws
if the command string of a menu entry is empty. Parent entries of sub menus of
extensions are empty. As the method doesn't know about the source of the command
a dummy entry is supplied.

Change-Id: I1d12bbf41c22b66e9ee29f1f05ea216134168795